--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
-<!DOCTYPE html><html lang="en"><head><meta name="viewport" content="width=device-width,initial-scale=1"><style>@font-face {
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <style>
+      @font-face {
         font-family: FOT-RodinHimawariPro-UB;
-        src: url('https://jokude.github.io/super-smash-bros-ui/assets/fonts/FOT-RodinHimawariPro-UB.otf') format('opentype');
+        src: url('https://jokude.github.io/super-smash-bros-ui/assets/fonts/FOT-RodinHimawariPro-UB.otf')
+          format('opentype');
       }
 
       html,
@@ -18,4 +24,16 @@
       }
       .wf-loading {
         opacity: 0;
-      }</style><meta charset="UTF-8"><meta name="description" content="Super Smash Bros Selection Screen"><title>Super Smash Bros Selection Screen</title><link rel="icon" href="https://jokude.github.io/super-smash-bros-ui/assets/images/favicon.ico"></head><body><div id="app"></div><script src="https://jokude.github.io/super-smash-bros-ui/index.bundle.production.js"></script></body></html>
+      }
+    </style>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Super Smash Bros Selection Screen" />
+    <title>Super Smash Bros Selection Screen</title>
+    <link rel="icon" href="https://jokude.github.io/super-smash-bros-ui/assets/images/favicon.ico" />
+  </head>
+
+  <body>
+    <div id="app"></div>
+    <script src="https://jokude.github.io/super-smash-bros-ui/index.bundle.production.js"></script>
+  </body>
+</html>
