--- a/src/html/template.html
+++ b/src/html/template.html
@@ -8,7 +8,9 @@
     <style>
       @font-face {
         font-family: FOT-RodinHimawariPro-UB;
-        src: url('<%= webpackConfig.output.publicPath %>assets/fonts/FOT-RodinHimawariPro-UB.otf') format('opentype');
+        src: url('<%= webpackConfig.output.publicPath %>assets/fonts/FOT-RodinHimawariPro-UB.woff2') format('woff2'),
+          url('<%= webpackConfig.output.publicPath %>assets/fonts/FOT-RodinHimawariPro-UB.woff') format('woff'),
+          url('<%= webpackConfig.output.publicPath %>assets/fonts/FOT-RodinHimawariPro-UB.otf') format('opentype');
       }
 
       html,
