--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html><html lang="en"><head><meta name="viewport" content="width=device-width,initial-scale=1"><style>@font-face {
         font-family: FOT-RodinHimawariPro-UB;
-        src: url('https://jokude.github.io/super-smash-bros-ui/assets/fonts/FOT-RodinHimawariPro-UB.otf') format('opentype');
+        src: url('https://jokude.github.io/super-smash-bros-ui/assets/fonts/FOT-RodinHimawariPro-UB.woff2') format('woff2'),
+          url('https://jokude.github.io/super-smash-bros-ui/assets/fonts/FOT-RodinHimawariPro-UB.woff') format('woff'),
+          url('https://jokude.github.io/super-smash-bros-ui/assets/fonts/FOT-RodinHimawariPro-UB.otf') format('opentype');
       }
 
       html,
