--- a/src/html/template.html
+++ b/src/html/template.html
@@ -10,7 +10,7 @@
         font-family: FOT-RodinHimawariPro-UB;
         src: url('<%= webpackConfig.output.publicPath %>assets/fonts/FOT-RodinHimawariPro-UB.woff2') format('woff2'),
           url('<%= webpackConfig.output.publicPath %>assets/fonts/FOT-RodinHimawariPro-UB.woff') format('woff'),
-          url('<%= webpackConfig.output.publicPath %>assets/fonts/FOT-RodinHimawariPro-UB.otf') format('opentype');
+          url('<%= webpackConfig.output.publicPath %>assets/fonts/FOT-RodinHimawariPro-UB.ttf') format('truetype');
       }
 
       html,
