--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
         font-family: FOT-RodinHimawariPro-UB;
         src: url('https://jokude.github.io/super-smash-bros-ui/assets/fonts/FOT-RodinHimawariPro-UB.woff2') format('woff2'),
           url('https://jokude.github.io/super-smash-bros-ui/assets/fonts/FOT-RodinHimawariPro-UB.woff') format('woff'),
-          url('https://jokude.github.io/super-smash-bros-ui/assets/fonts/FOT-RodinHimawariPro-UB.otf') format('opentype');
+          url('https://jokude.github.io/super-smash-bros-ui/assets/fonts/FOT-RodinHimawariPro-UB.ttf') format('truetype');
       }
 
       html,
