--- a/index.html
+++ b/index.html
@@ -1,23 +1,1 @@
-<!DOCTYPE html><html lang="en"><head><meta name="viewport" content="width=device-width,initial-scale=1"><style>@font-face {
-        font-family: FOT-RodinHimawariPro-UB;
-        src: url('https://jokude.github.io/super-smash-bros-ui/assets/fonts/FOT-RodinHimawariPro-UB.woff2') format('woff2'),
-          url('https://jokude.github.io/super-smash-bros-ui/assets/fonts/FOT-RodinHimawariPro-UB.woff') format('woff'),
-          url('https://jokude.github.io/super-smash-bros-ui/assets/fonts/FOT-RodinHimawariPro-UB.ttf') format('truetype');
-      }
-
-      html,
-      body,
-      #app {
-        margin: 0;
-        height: 100%;
-        width: 100%;
-      }
-      #app {
-        display: flex;
-        align-items: center;
-        align-content: center;
-        justify-content: center;
-      }
-      .wf-loading {
-        opacity: 0;
-      }</style><meta charset="UTF-8"><meta name="description" content="Super Smash Bros Selection Screen"><title>Super Smash Bros Selection Screen</title><link rel="icon" href="https://jokude.github.io/super-smash-bros-ui/assets/images/favicon.ico"></head><body><div id="app"></div><script src="https://jokude.github.io/super-smash-bros-ui/index.bundle.production.js"></script></body></html>
+<!DOCTYPE html><html lang="en"><head><meta name="viewport" content="width=device-width,initial-scale=1"><style>@font-face{font-family:FOT-RodinHimawariPro-UB;src:url(https://jokude.github.io/super-smash-bros-ui/assets/fonts/FOT-RodinHimawariPro-UB.woff2) format("woff2"),url(https://jokude.github.io/super-smash-bros-ui/assets/fonts/FOT-RodinHimawariPro-UB.woff) format("woff"),url(https://jokude.github.io/super-smash-bros-ui/assets/fonts/FOT-RodinHimawariPro-UB.ttf) format("truetype")}#_2Ufby_NwOA63v9C9R82Yt0,body{margin:0;height:100%;width:100%}#_2Ufby_NwOA63v9C9R82Yt0{display:flex;align-items:center;align-content:center;justify-content:center}._2RlstU4-0mX9-gEFsM4bcx{opacity:0}</style><meta charset="UTF-8"><meta name="description" content="Super Smash Bros Selection Screen"><title>Super Smash Bros Selection Screen</title><link rel="icon" href="assets/images/favicon.ico"><link rel="stylesheet" type="text/css" href="index.css"></head><body><div id="app"></div><script src="index.bundle.production.js"></script></body></html>
